[package]
name = "deepgram-server"
version = "0.1.0"
edition = "2021"
default-run = "server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "^4.2.1"
actix-rt = "2.7.0"
hound = "3.5.0"
uuid = { version = "1.2.1", features = ["v4"] }
serde = { version = "^1.0.147", features = ["derive"] }
chrono = { version = "^0.4.23", features = ["serde"] }

[[bin]]
name = "server"
